# cplusplus_exercices

./: README.md
exercise01/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  HelloProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  main.vcxproj  main.vcxproj.filters
exercise02/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DoubleProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  funcs.cpp  funcs.h  main.cpp  my_library.vcxproj  my_library.vcxproj.filters  my_program.vcxproj  my_program.vcxproj.filters
exercise03/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CoolProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  funcs.cpp  funcs.h  lib.vcxproj  lib.vcxproj.filters  main.cpp  main.vcxproj  main.vcxproj.filters
exercise03/lib.dir/Debug/: lib.lib.recipe
exercise03/lib.dir/Debug/lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  lib.lastbuildstate
exercise04/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CoolProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  funcs.cpp  funcs.h  main.cpp  main.vcxproj  main.vcxproj.filters  mylib.vcxproj  mylib.vcxproj.filters
exercise05/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CoolProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  funcs.cpp  main.cpp  main.vcxproj  main.vcxproj.filters  mylib.vcxproj  mylib.vcxproj.filters
exercise06/: CMakeLists.txt  Makefile  funcs.cpp  funcs.h  main  main.cpp
exercise07/: CMakeLists.txt  (+5 more)
exercise11/: CMakeLists.txt  Makefile  Triangle.cpp  Triangle.h  main  main.cpp
exercise13/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  RegularPolygon.cpp  RegularPolygon.h  Triangle.cpp  Triangle.h  main  main.cpp  test_Hexagon.cpp  test_Triangle.cpp
(+85 files in other folders)
